--- a/src/main/resources/public/src/css/main.css
+++ b/src/main/resources/public/src/css/main.css
@@ -2,6 +2,11 @@ body {
     background-color: #f9f9f9;
 }
 
+hr {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 @media (max-width: 768px) {
     .container {
         padding: 0;
