--- a/src/main/resources/public/src/css/main.css
+++ b/src/main/resources/public/src/css/main.css
@@ -7,6 +7,10 @@ hr {
     margin-bottom: 0.6em;
 }
 
+.simple-text {
+    font-weight: normal;
+}
+
 @media (max-width: 768px) {
     .container {
         padding: 0;
