--- a/src/main/resources/public/src/css/main.css
+++ b/src/main/resources/public/src/css/main.css
@@ -2,10 +2,10 @@ body {
     background-color: #f9f9f9;
 }
 
-hr {
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
-}
+/*hr {*/
+    /*margin-top: 1em;*/
+    /*margin-bottom: 1em;*/
+/*}*/
 
 .simple-text {
     font-weight: normal;
