--- a/src/main/resources/public/src/css/main.css
+++ b/src/main/resources/public/src/css/main.css
@@ -1,13 +1,19 @@
 body {
-    background-color: #f9f9f9;
+    background-color: #f2f2f8;
 }
 
 hr {
     margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 .simple-text {
     font-weight: normal;
+}
+
+.header-text {
+    font-family: Arial;
+    font-size: large;
 }
 
 @media (max-width: 768px) {
@@ -25,8 +31,9 @@ hr {
 @media (max-width: 768px) {
     #mobilePanelId {
         border-radius: 0;
-        border-left: none;
-        border-right: none;
+        border: none;
+        margin: 4px;
+        padding-bottom: 0px;
     }
 }
 
