--- a/src/main/resources/public/src/css/main.css
+++ b/src/main/resources/public/src/css/main.css
@@ -32,8 +32,15 @@ hr {
     #mobilePanelId {
         border-radius: 0;
         border: none;
-        margin: 6px;
+        margin: 5px;
+        padding-left: 0;
+        padding-right: 0;
         padding-bottom: 0px;
+    }
+
+    .panel .panel-body {
+        padding-left: 12px;
+        padding-right: 12px;
     }
 }
 
